sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:7: error: ';' expected but ',' found.
    while(getValeur(pTemp)>vtemp && pTemp>0){copie(pTemp,Ptemp+1),pTemp-=1}
                                                                 ^